--- a/angular/style.css
+++ b/angular/style.css
@@ -7,3 +7,9 @@ li {
     float: left;
     padding-left: 1%;
 }
+#static_contact {
+    text-align:center;
+}
+#static_about {
+    text-align:center;
+}
