--- a/style.css
+++ b/style.css
@@ -1,15 +1,2 @@
-.nav-menu {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-.nav-menu-element {
-    float: left;
-    padding-left: 1%;
-}
-.static-contact {
-    text-align:center;
-}
-.static-about {
-    text-align:center;
-}
+/* Styles go here */
+
