--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
 /* Styles go here */
 .form-control {
-	display: inline !important
+	display: inline !important;
 }
-.img {
-	margin: 0 auto;
-	display: block;
+.imageContainer {
 	
+	margin: 0 auto !important;
+	display: block !important;
+	width: 250px;
+    height: 150px;
+	text-align: center;
+}
+.imageContainer img {
+	width: 100%;
+    height: auto;
+	margin: 0 auto;
+	display: block !important;
+}
+
+.center {
+	text-align: center;
 }
